resized resume and fixed portfolio project spacing

--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -6,6 +6,5 @@
 .projects {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
     max-width: 900px;
 }
